Bug 1175609 - Bring onnegotiationneeded in line with spec. r=mt